--- a/contact.html
+++ b/contact.html
@@ -35,32 +35,26 @@
 
         <div class="contact-list">
             <div class="contact-email">
-                <i class="fas fa-envelope"></i>Email
+                <i class="fas fa-envelope"></i>Email  
                 <div class="text-secondary">irakozeyves9@gmail.com</div>
             </div>
             <div class="contact-phone">
-                <i class="fas fa-mobile-alt"></i>Mobile Phone
+                <i class="fas fa-mobile-alt"></i>Mobile Phone  
                 <div class="text-secondary">+250788622754</div>
             </div>
             <div class="contact-address">
-                <i class="fas fa-marker-alt"></i>Address
+                <i class="fas fa-marker-alt"></i>Address  
                 <div class="text-secondary">KN 235 St 5</div>
             </div>
         </div>
         <div class="social-icons">
-          <a href="#!">
-            <i class="fab fa-twitter fa-2x"></i>
-          </a>
-          <a href="#!">
-            <i class="fab fa-facebook fa-2x"></i>
-          </a>
-          <a href="#!">
+          <a href="https://www.instagram.com/bitsofcodes/">
             <i class="fab fa-instagram fa-2x"></i>
           </a>
-          <a href="#!">
+          <a href="https://www.linkedin.com/in/irakoze-yves-714663187">
             <i class="fab fa-linkedin fa-2x"></i>
           </a>
-          <a href="#!">
+          <a href="https://github.com/irakozetony">
             <i class="fab fa-github fa-2x"></i>
           </a>
         </div>
