--- a/about.html
+++ b/about.html
@@ -35,22 +35,28 @@
           <div class="about-bio">
             <h2 class="text-secondary">BIO</h2>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat
-              eum quia repudiandae tempore accusamus, soluta quisquam officiis
-              iure similique! Sequi quaerat numquam laboriosam temporibus
-              expedita consequuntur? Temporibus tempore ducimus in?
+              Hi,<br>
+              I'm Irakoze Yves. A web developer from Kigali.
+              <br>
+              Currently, I'm still and undergrduate student at University of Rwanda in Information Technology.
+              I'm mainly a self taught programmer and a tech enthusiast in general. I have experience in working with
+              technologies like HTML, CSS, JS and PHP and MySQL.
+              <br>
+              Besides tech, I'm one of those people who love music without a favourite artist or song. I also love comedy
+              and jogging. I'm also an admirer of nature
             </p>
           </div>
         </div>
         <div class="jobs">
           <div class="jobs-job">
-            <h2 class="text-secondary">2020 - Current</h2>
-            <h3>Google</h3>
-            <h6>Full Stack Developer</h6>
+            <h2 class="text-secondary">2021 - Current</h2>
+            <h3>SolveIT</h3>
+            <h6>Intern</h6>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus
-              recusandae debitis corrupti inventore ut quos sunt omnis quas
-              possimus id?
+              In my internship at SolveIT I was able to expand my experience as a developer since each day
+              there was always a new challenge that I had to solve. I was able to learn a lot from my supervisor
+              and also figure out new ways to solve complicated problems that every developer encounters on a
+              daily basis.
             </p>
           </div>
           <div class="jobs-job">
