--- a/projects.html
+++ b/projects.html
@@ -38,32 +38,32 @@
             <div class="projects-item">
                 <img src="images/image-14.jpg" alt="My Projects">
                 <div class="projects-buttons">
-                    <a href="#" class="projects-button">
+                    <a href="https://irakozetony.github.io/easybankchallenge/" class="projects-button">
                         <i class="fas fa-eye"></i> Preview
                     </a>
-                    <a href="#" class="projects-button">
+                    <a href="https://github.com/irakozetony/easybankchallenge" class="projects-button">
                         <i class="fab fa-github"></i> Github
                     </a>
                 </div>
             </div>
             <div class="projects-item">
-                <img src="images/image-2.jpg" alt="My Projects">
+                <img src="images/buildproject-ss.jpg" alt="My Projects">
                 <div class="projects-buttons">
-                    <a href="#" class="projects-button">
+                    <!-- <a href="#" class="projects-button">
                         <i class="fas fa-eye"></i> Preview
-                    </a>
-                    <a href="#" class="projects-button">
+                    </a> -->
+                    <a href="https://github.com/irakozetony/buildproject" class="projects-button">
                         <i class="fab fa-github"></i> Github
                     </a>
                 </div>
             </div>
             <div class="projects-item">
-                <img src="images/image-17.jpg" alt="My Projects">
+                <img src="images/styleconferences-ss.jpg" alt="My Projects">
                 <div class="projects-buttons">
-                    <a href="#" class="projects-button">
+                    <a href="https://solveitstyleconferences.netlify.app/" class="projects-button">
                         <i class="fas fa-eye"></i> Preview
                     </a>
-                    <a href="#" class="projects-button">
+                    <a href="https://github.com/irakozetony/solveitwork-stylesconference" class="projects-button">
                         <i class="fab fa-github"></i> Github
                     </a>
                 </div>
