--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
         </div>
         <div class="projects-items">
             <div class="projects-item">
-                <img src="images/image-14.jpg" alt="My Projects">
+                <img src="images/easybank-ss.jpg" alt="My Projects">
                 <div class="projects-buttons">
                     <a href="https://irakozetony.github.io/easybankchallenge/" class="projects-button">
                         <i class="fas fa-eye"></i> Preview
