--- a/projects.html
+++ b/projects.html
@@ -49,9 +49,9 @@
             <div class="projects-item">
                 <img src="images/buildproject-ss.jpg" alt="My Projects">
                 <div class="projects-buttons">
-                    <!-- <a href="#" class="projects-button">
+                    <a href="#" class="projects-button" disbaled>
                         <i class="fas fa-eye"></i> Preview
-                    </a> -->
+                    </a>
                     <a href="https://github.com/irakozetony/buildproject" class="projects-button">
                         <i class="fab fa-github"></i> Github
                     </a>
