--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tony Yves Portfolio</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -37,21 +38,15 @@
             <h2>Web Designer, Developer &amp; Programmer</h2>
 
             <div class="social-icons">
-                <a href="#!">
-                    <i class="fab fa-twitter fa-2x"></i>
-                </a>
-                <a href="#!">
-                    <i class="fab fa-facebook fa-2x"></i>
-                </a>
-                <a href="#!">
+                <a href="https://www.instagram.com/bitsofcodes/">
                     <i class="fab fa-instagram fa-2x"></i>
-                </a>
-                <a href="#!">
+                  </a>
+                  <a href="https://www.linkedin.com/in/irakoze-yves-714663187">
                     <i class="fab fa-linkedin fa-2x"></i>
-                </a>
-                <a href="#!">
+                  </a>
+                  <a href="https://github.com/irakozetony">
                     <i class="fab fa-github fa-2x"></i>
-                </a>
+                  </a>
             </div>
 
             <footer>
